styles/globals.css
@import url('//fonts.cdnfonts.com/css/d-din');
@import url('//fonts.cdnfonts.com/css/inconsolata-2');
html,
body {
  padding: 0;
  margin: 0;
  height: 100%;
  font-family: 'D-DIN', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
  background: transparent url(/kid.png) bottom 0px left 16px no-repeat;
  background-size: 200px;
  background-color: #d3d9ed;
  letter-spacing: 0.5px;
  color: rgba(0, 0, 0, 0.75);
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

a {
  color: #0000ff;
  text-decoration: none;
}
a:hover {
  color: #3333ff;
}

a.border {
  letter-spacing: 1px;
  border-bottom: 1px solid #0000ff;
  padding-bottom: 4px;
}

a.logo {
  font-size: 32px;
  font-weight: bold;
}

* {
  box-sizing: border-box;
}

#__next {
  height: 100%;
}

#container {
  height: 100%;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
}

#container > main {
  position: relative;
  height: calc(100vh - 144px);
  flex: 1;
}

#container > header,
#container > footer {
  position: relative;
  height: 72px;
  padding: 20px;
  display: flex;
  align-items: center;
}

#container > header {
  background-color: #fff;
  border-bottom: 1px solid #0000ff;
  color: #000;
  display: flex;
  align-items: center;
  flex-direction: row;
  justify-content: space-between;
}
#container > header > div a:not(.logo) {
  cursor: pointer;
  padding: 0 16px;
  outline: none;
  font-size: 14px;
  letter-spacing: 1px;
}

#container > header > div:last-child a:not(:last-child) {
  border-right: 1px solid #0000ff44;
}
#container > header > div:last-child a:last-child {
  padding-right: 0;
}

#container > footer {
  margin-bottom: 0;
  text-transform: uppercase;
  font-size: 18px;
  letter-spacing: 0.5px;
  font-family: Inconsolata;
}
#container > footer > p {
  text-align: center;
  margin: 0 auto;
}

.condensed {
  font-family: 'D-DIN Condensed';
  letter-spacing: 1px;
  opacity: 0.75;
}

.code {
  padding: 0.75rem;
  font-size: 16px;
  opacity: 0.95;
  font-family: 'Inconsolata', Menlo, Monaco, Lucida Console, Liberation Mono,
    DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace;
}

.grid {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
  max-width: 800px;
}

@media (max-width: 600px) {
  body {
    background-size: 0;
  }
  .grid {
    width: 100%;
    flex-direction: column;
  }
  #container > header > div a {
    font-size: 28px;
  }
  #container > header > div a:not(.logo) {
    font-size: 12px;
  }

  h1 {
    font-size: 24px;
  }
  h2 {
    font-size: 18px;
    width: 320px;
  }

  ul > li {
    font-size: 12px;
  }
  ul > li .txt.center {
    justify-content: flex-start;
  }
  ul > li .numbers {
    width: 64px !important;
  }
  ul > li .txt img {
    width: 16px !important;
    height: 16px !important;
    object-fit: contain;
  }
  ul > li .txt span {
    width: 16px;
    height: 16px;
    margin-right: 13px !important;
  }
  ul > li.head > span {
    font-size: 12px;
    font-weight: normal;
  }

  footer p {
    font-size: 12px;
  }
}

.right {
  float: right;
}
.center {
  text-align: center;
}
.mute {
  opacity: 0.3;
  font-weight: normal;
  margin: 0 0.2em;
}

@media (hover: hover) {
}

